<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/antiquewhite">

    <ImageView
        android:id="@+id/bookDetailsImage"
        android:layout_width="143dp"
        android:layout_height="219dp"
        app:srcCompat="@drawable/book_image"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="4dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/bookDetailsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_details_titre"
        android:textColor="@color/viridian"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookDetailsImage" />

    <TextView
        android:id="@+id/bookDetailsAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/book_details_author"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/bookDetailsTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/bookDetailsGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/book_details_genre"
        android:textColor="@color/caputmortuum"
        android:textSize="20sp"
        android:gravity="center"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/bookDetailsAuthor" />

    <TextView
        android:id="@+id/bookDetailsNote"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/teagreen"
        android:ems="10"
        android:gravity="start|top"
        android:text="@string/book_details_note"
        android:textColor="@color/caputmortuum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookDetailsNoteLabel" />

    <TextView
        android:id="@+id/bookDetailsStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/book_details_status"
        android:textColor="@color/caputmortuum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookDetailsNote" />

    <Button
        android:id="@+id/bookDetailsCancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/millstonegrey"
        android:text="@string/cancel_buttonStr"
        android:gravity="center"
        android:textColor="@color/antiquewhite"
        app:layout_constraintTop_toBottomOf="@id/bookDetailsStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/bookDetailsNoteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/book_details_note_label"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="361dp"
        app:layout_constraintTop_toBottomOf="@id/bookDetailsGenre"
        app:layout_constraintStart_toStartOf="parent"/>


    <!--
        <EditText
            android:id="@+id/editNotesText"
            android:layout_width="220dp"
            android:layout_height="120dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textColor="@color/caputmortuum"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cancelBtn"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toEndOf="@+id/newBookNotesView" />
    -->
</androidx.constraintlayout.widget.ConstraintLayout>